--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,19 +17,28 @@ spring:
   # JPA Configuration
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate  # Changed from 'update' to 'validate' for Flyway
     show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
-    defer-datasource-initialization: true
+    defer-datasource-initialization: false  # Let Flyway handle schema creation
 
-  # SQL Initialization
+  # Flyway Configuration
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+    validate-on-migrate: true
+    clean-disabled: true  # Prevent accidental data loss
+    baseline-version: 0
+    baseline-description: Initial baseline
+
+  # SQL Initialization (disabled in favor of Flyway)
   sql:
     init:
-      mode: always
-      platform: postgresql
+      mode: never  # Disabled - using Flyway instead
 
 # Server Configuration
 server:
@@ -37,9 +46,23 @@ server:
   servlet:
     context-path: /api/v1
 
+# Application Configuration
+app:
+  base-url: http://localhost:8080/api/v1
+
 # Logging Configuration
 logging:
   level:
     com.example.urlshortener: DEBUG
     org.hibernate.SQL: DEBUG
-    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+    org.flywaydb: INFO
+
+# Management Endpoints (for monitoring)
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,flyway
+  endpoint:
+    health:
+      show-details: when_authorized
