--- a/pom.xml
+++ b/pom.xml
@@ -38,17 +38,25 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
-		<!-- PostgreSQL Driver -->
+		<!-- H2 Database for Development AND Runtime -->
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- Flyway Core for Database Migrations -->
+		<!-- PostgreSQL Driver (for production deployment) -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+		<!-- Flyway Core for Database Migrations (optional, disabled by default) -->
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
+			<optional>true</optional>
 		</dependency>
 
 		<!-- Lombok - Updated version for Java 17 compatibility -->
@@ -70,13 +78,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
-		</dependency>
-
-		<!-- H2 Database for Testing -->
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>test</scope>
 		</dependency>
 
 		<!-- Spring Boot Actuator for monitoring -->
@@ -127,31 +128,6 @@
 				</configuration>
 			</plugin>
 
-			<!-- Flyway Maven Plugin for Database Migrations -->
-			<plugin>
-				<groupId>org.flywaydb</groupId>
-				<artifactId>flyway-maven-plugin</artifactId>
-				<version>9.22.3</version>
-				<configuration>
-					<url>jdbc:postgresql://localhost:5432/urlshortener</url>
-					<user>postgres</user>
-					<password>password</password>
-					<locations>
-						<location>classpath:db/migration</location>
-					</locations>
-					<baselineOnMigrate>true</baselineOnMigrate>
-					<validateOnMigrate>true</validateOnMigrate>
-					<cleanDisabled>true</cleanDisabled>
-				</configuration>
-				<dependencies>
-					<dependency>
-						<groupId>org.postgresql</groupId>
-						<artifactId>postgresql</artifactId>
-						<version>42.6.0</version>
-					</dependency>
-				</dependencies>
-			</plugin>
-
 			<!-- Maven Surefire Plugin for running tests -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -164,16 +140,26 @@
 	<!-- Profiles for different environments -->
 	<profiles>
 		<profile>
-			<id>dev</id>
+			<id>h2</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
 			<properties>
-				<spring.profiles.active>dev</spring.profiles.active>
+				<spring.profiles.active>h2</spring.profiles.active>
 			</properties>
 		</profile>
 		<profile>
-			<id>prod</id>
+			<id>postgres</id>
 			<properties>
-				<spring.profiles.active>prod</spring.profiles.active>
+				<spring.profiles.active>postgres</spring.profiles.active>
 			</properties>
+			<dependencies>
+				<dependency>
+					<groupId>org.postgresql</groupId>
+					<artifactId>postgresql</artifactId>
+					<scope>runtime</scope>
+				</dependency>
+			</dependencies>
 		</profile>
 	</profiles>
 </project>
