--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,43 +2,40 @@ spring:
   application:
     name: url-shortener
 
-  # Database Configuration
+  # Database Configuration - H2 In-Memory Database
   datasource:
-    url: jdbc:postgresql://localhost:5432/urlshortener
-    username: postgres
-    password: password
-    driver-class-name: org.postgresql.Driver
-    hikari:
-      connection-timeout: 20000
-      maximum-pool-size: 10
-      minimum-idle: 5
-      idle-timeout: 300000
+    url: jdbc:h2:mem:urlshortener;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
 
   # JPA Configuration
   jpa:
     hibernate:
-      ddl-auto: validate  # Changed from 'update' to 'validate' for Flyway
+      ddl-auto: create-drop  # Let Hibernate create schema since we're using H2
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+        dialect: org.hibernate.dialect.H2Dialect
         format_sql: true
-    defer-datasource-initialization: false  # Let Flyway handle schema creation
+    defer-datasource-initialization: false
 
-  # Flyway Configuration
+  # H2 Console Configuration (for debugging)
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+      settings:
+        web-allow-others: true
+
+  # Flyway Configuration - Disabled for H2 development
   flyway:
-    enabled: true
-    locations: classpath:db/migration
-    baseline-on-migrate: true
-    validate-on-migrate: true
-    clean-disabled: true  # Prevent accidental data loss
-    baseline-version: 0
-    baseline-description: Initial baseline
+    enabled: false  # Disable Flyway, let Hibernate handle schema creation
 
-  # SQL Initialization (disabled in favor of Flyway)
+  # SQL Initialization
   sql:
     init:
-      mode: never  # Disabled - using Flyway instead
+      mode: never
 
 # Server Configuration
 server:
@@ -55,14 +52,14 @@ logging:
   level:
     com.example.urlshortener: DEBUG
     org.hibernate.SQL: DEBUG
-    org.flywaydb: INFO
+    org.springframework.web: DEBUG
 
 # Management Endpoints (for monitoring)
 management:
   endpoints:
     web:
       exposure:
-        include: health,info,flyway
+        include: health,info,h2
   endpoint:
     health:
-      show-details: when_authorized
+      show-details: always
