--- a/pom.xml
+++ b/pom.xml
@@ -38,25 +38,17 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
-		<!-- H2 Database for Development AND Runtime -->
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-
-		<!-- PostgreSQL Driver (for production deployment) -->
+		<!-- PostgreSQL Driver -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<scope>provided</scope>
+			<scope>runtime</scope>
 		</dependency>
 
-		<!-- Flyway Core for Database Migrations (optional, disabled by default) -->
+		<!-- Flyway Core for Database Migrations -->
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
-			<optional>true</optional>
 		</dependency>
 
 		<!-- Lombok - Updated version for Java 17 compatibility -->
@@ -78,6 +70,13 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+		<!-- H2 Database for Testing -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- Spring Boot Actuator for monitoring -->
@@ -128,6 +127,31 @@
 				</configuration>
 			</plugin>
 
+			<!-- Flyway Maven Plugin for Database Migrations -->
+			<plugin>
+				<groupId>org.flywaydb</groupId>
+				<artifactId>flyway-maven-plugin</artifactId>
+				<version>9.22.3</version>
+				<configuration>
+					<url>jdbc:postgresql://localhost:5432/urlshortener</url>
+					<user>postgres</user>
+					<password>password</password>
+					<locations>
+						<location>classpath:db/migration</location>
+					</locations>
+					<baselineOnMigrate>true</baselineOnMigrate>
+					<validateOnMigrate>true</validateOnMigrate>
+					<cleanDisabled>true</cleanDisabled>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.postgresql</groupId>
+						<artifactId>postgresql</artifactId>
+						<version>42.6.0</version>
+					</dependency>
+				</dependencies>
+			</plugin>
+
 			<!-- Maven Surefire Plugin for running tests -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -140,26 +164,16 @@
 	<!-- Profiles for different environments -->
 	<profiles>
 		<profile>
-			<id>h2</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
+			<id>dev</id>
 			<properties>
-				<spring.profiles.active>h2</spring.profiles.active>
+				<spring.profiles.active>dev</spring.profiles.active>
 			</properties>
 		</profile>
 		<profile>
-			<id>postgres</id>
+			<id>prod</id>
 			<properties>
-				<spring.profiles.active>postgres</spring.profiles.active>
+				<spring.profiles.active>prod</spring.profiles.active>
 			</properties>
-			<dependencies>
-				<dependency>
-					<groupId>org.postgresql</groupId>
-					<artifactId>postgresql</artifactId>
-					<scope>runtime</scope>
-				</dependency>
-			</dependencies>
 		</profile>
 	</profiles>
 </project>
