--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,40 +2,43 @@ spring:
   application:
     name: url-shortener
 
-  # Database Configuration - H2 In-Memory Database
+  # Database Configuration
   datasource:
-    url: jdbc:h2:mem:urlshortener;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    url: jdbc:postgresql://localhost:5432/urlshortener
+    username: postgres
+    password: password
+    driver-class-name: org.postgresql.Driver
+    hikari:
+      connection-timeout: 20000
+      maximum-pool-size: 10
+      minimum-idle: 5
+      idle-timeout: 300000
 
   # JPA Configuration
   jpa:
     hibernate:
-      ddl-auto: create-drop  # Let Hibernate create schema since we're using H2
+      ddl-auto: validate  # Changed from 'update' to 'validate' for Flyway
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
+        dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
-    defer-datasource-initialization: false
+    defer-datasource-initialization: false  # Let Flyway handle schema creation
 
-  # H2 Console Configuration (for debugging)
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-      settings:
-        web-allow-others: true
-
-  # Flyway Configuration - Disabled for H2 development
+  # Flyway Configuration
   flyway:
-    enabled: false  # Disable Flyway, let Hibernate handle schema creation
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+    validate-on-migrate: true
+    clean-disabled: true  # Prevent accidental data loss
+    baseline-version: 0
+    baseline-description: Initial baseline
 
-  # SQL Initialization
+  # SQL Initialization (disabled in favor of Flyway)
   sql:
     init:
-      mode: never
+      mode: never  # Disabled - using Flyway instead
 
 # Server Configuration
 server:
@@ -52,14 +55,14 @@ logging:
   level:
     com.example.urlshortener: DEBUG
     org.hibernate.SQL: DEBUG
-    org.springframework.web: DEBUG
+    org.flywaydb: INFO
 
 # Management Endpoints (for monitoring)
 management:
   endpoints:
     web:
       exposure:
-        include: health,info,h2
+        include: health,info,flyway
   endpoint:
     health:
-      show-details: always
+      show-details: when_authorized
