--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<artifactId>url-shortener</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<name>url-shortener</name>
-	<description>URL Shortener Service built with Spring Boot</description>
+	<description>URL Shortener Service built with Spring Boot and Redis Caching</description>
 
 	<properties>
 		<java.version>17</java.version>
@@ -36,6 +36,24 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<!-- Spring Boot Data Redis Starter -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
+
+		<!-- Spring Boot Cache Starter -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+
+		<!-- Lettuce Redis Client (default with spring-boot-starter-data-redis) -->
+		<dependency>
+			<groupId>io.lettuce.lettuce-core</groupId>
+			<artifactId>lettuce-core</artifactId>
 		</dependency>
 
 		<!-- PostgreSQL Driver -->
@@ -90,6 +108,20 @@
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.2.0</version>
+		</dependency>
+
+		<!-- Jackson support for Java Time (included in starter-web but explicit for clarity) -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
+
+		<!-- Embedded Redis for Testing (optional) -->
+		<dependency>
+			<groupId>it.ozimov</groupId>
+			<artifactId>embedded-redis</artifactId>
+			<version>0.7.3</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
