Update Docker setup and configs for improved compatibility
Removed problematic init-db.sql mount and custom volume driver_opts from docker-compose.yml to resolve data directory issues. Added cleanup of data directories in docker-setup.sh. Added init-db.sql for PostgreSQL initialization. Updated .gitignore to exclude data/ directory. Updated redis.conf for Redis 7.x compatibility.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql:ro
+      # Remove the problematic init-db.sql mount for now
     networks:
       - urlshortener-network
     healthcheck:
@@ -158,17 +158,9 @@ services:
 volumes:
   postgres_data:
     driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: ./data/postgres
 
   redis_data:
     driver: local
-    driver_opts:
-      type: none
-      o: bind
-      device: ./data/redis
 
   pgadmin_data:
     driver: local
