--- a/redis.conf
+++ b/redis.conf
@@ -1,4 +1,4 @@
-# Redis configuration for URL Shortener
+# Redis configuration for URL Shortener (Redis 7.x compatible)
 # Save this as redis.conf in your project root
 
 # Network
@@ -13,10 +13,10 @@ pidfile /var/run/redis_6379.pid
 loglevel notice
 logfile ""
 
-# Snapshotting (Persistence)
-save 900 1    # Save if at least 1 key changed in 900 seconds
-save 300 10   # Save if at least 10 keys changed in 300 seconds
-save 60 10000 # Save if at least 10000 keys changed in 60 seconds
+# Snapshotting (Persistence) - Fixed for Redis 7.x
+save 900 1
+save 300 10
+save 60 10000
 stop-writes-on-bgsave-error yes
 rdbcompression yes
 rdbchecksum yes
