Fix Redis key prefix in Docker config
Corrected the Redis key-prefix in application-docker.yml by removing the trailing colon and adding quotes to ensure proper configuration.

--- a/src/main/resources/application-docker.yml
+++ b/src/main/resources/application-docker.yml
@@ -40,7 +40,7 @@ spring:
     redis:
       time-to-live: ${APP_CACHE_URL_TTL:3600}s
       cache-null-values: false
-      key-prefix: urlshortener:
+      key-prefix: "urlshortener"  # ✅ Fixed: Removed trailing colon and added quotes
       use-key-prefix: true
 
   # JPA Configuration
